tdf#92258 - fix crash editing macro module name.

Change-Id: I8e0bbab7d7497ed7c136ddbfba73618834d5a204